2005-07-03  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_sphPlm_e): compute exponential
	internally to avoid underflow error when calling gsl_sf_exp_err

2005-07-02  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_i.c (gsl_sf_bessel_il_scaled_array): handle x==0 as a
	special case

	* bessel_k.c (gsl_sf_bessel_kl_scaled_array): added lmax==0 as a
	special case

	* bessel_y.c (gsl_sf_bessel_yl_array): added lmax==0 as a special
	case

	* transport.c (gsl_sf_transport_2_e): improve error estimate for
	small x

2005-06-26  Brian Gough  <bjg@network-theory.co.uk>

	* test_sf.c (test_jac): added tests over the full period for
	elljac functions

2005-05-23  Brian Gough  <bjg@network-theory.co.uk>

	* test_bessel.c (test_bessel): added test for steed(99,1,...)

	* legendre_H3d.c (legendre_H3d_CF1): use hypot
	(legendre_H3d_CF1_ser): use hypot
	(gsl_sf_legendre_H3d_e): use hypot
	(gsl_sf_legendre_H3d_e): use hypot
	(gsl_sf_legendre_H3d_array): use hypot

	* dilog.c (dilogc_unitdisk): use hypot

	* coulomb.c (gsl_sf_coulomb_CL_array): use hypot
	(coulomb_F_recur): use hypot
	(coulomb_G_recur): use hypot
	(coulomb_jwkb): use hypot
	(gsl_sf_coulomb_wave_F_array): use hypot
	(gsl_sf_coulomb_wave_FG_array): use hypot
	(gsl_sf_coulomb_wave_FGp_array): use hypot

	* bessel_j.c (gsl_sf_bessel_jl_steed_array): use hypot

	* bessel.c (gsl_sf_bessel_Inu_scaled_asymp_unif_e): use hypot
	(gsl_sf_bessel_Knu_scaled_asymp_unif_e): use hypot

2005-03-02  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb_bound.c (gsl_sf_hydrogenicR_e): don't check for
	underflow when function is known to be zero (e.g. r=0 l>0 or at
	zeroes of the laguerre polynomial).

2004-12-29  Brian Gough  <bjg@network-theory.co.uk>

	* dilog.c (gsl_sf_complex_dilog_e): use const consistently in
	arguments of declaration and definition
	(gsl_sf_complex_dilog_xy_e): as above

2004-12-26  Brian Gough  <bjg@network-theory.co.uk>
